# alfrd

./: README.md  README.md.old  pyproject.toml  setup.cfg.tmp
.github/workflows/: push_test.yml  test_onpush.yaml
src/alfrd/: __init__.py  lib.py  plugins.py  util.py
src/alfrd/core/: logger.py  project.py
tests/: test_alfrd.py
